[package]
name = "rustgate-proxy"
version = "0.1.0"
edition = "2021"
authors = ["uky <yuki.detective@gmail.com>"]
license = "MIT"
description = "MITM-capable HTTP/HTTPS proxy library and CLI"
readme = "README.md"
repository = "https://github.com/uky007/RustGate-Proxy"
keywords = ["proxy", "mitm", "http", "https", "tls"]
categories = ["network-programming", "web-programming"]

[lib]
name = "rustgate"
path = "src/lib.rs"

[[bin]]
name = "rustgate"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["server", "client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
http = "1"
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2"
rcgen = "0.13"
bytes = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
webpki-roots = "0.26"

[dev-dependencies]
tempfile = "3"
