[package]
name = "rustgate-proxy"
version = "0.4.0"
edition = "2021"
authors = ["uky <yuki.detective@gmail.com>"]
license = "MIT"
description = "MITM-capable HTTP/HTTPS proxy with WebSocket C2 tunneling (SOCKS5, reverse TCP)"
readme = "README.crates-io.md"
repository = "https://github.com/uky007/RustGate-Proxy"
keywords = ["proxy", "mitm", "tunnel", "socks5", "security"]
categories = ["network-programming", "web-programming"]

[lib]
name = "rustgate"
path = "src/lib.rs"

[[bin]]
name = "rustgate"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["server", "client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
http = "1"
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2"
rcgen = { version = "0.13", features = ["pem", "x509-parser"] }
bytes = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
webpki-roots = "0.26"
tokio-tungstenite = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
ring = "0.17"
base64 = "0.22"
ratatui = "0.29"
crossterm = "0.28"

[dev-dependencies]
tempfile = "3"
